Closed
Bug 233191
Opened 22 years ago
Closed 22 years ago
to/cc/bcc menulist in addressing widget in compose window is too wide
Categories
(Core :: XBL, defect)
Core
XBL
Tracking
()
RESOLVED
FIXED
People
(Reporter: mscott, Assigned: bzbarsky)
References
Details
Attachments
(3 files, 1 obsolete file)
|
38.20 KB,
image/pjpeg
|
Details | |
|
8.97 KB,
patch
|
mscott
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
|
5.17 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
to/cc/bcc menulist in addressing widget in compose window is too wide
let me screen shot.
this is with this mornings build, classic skin.
from the console:
WARNING: empty damage rect: update caller to avoid fcn call overhead, file d:/tr
ees/vcard/mozilla/layout/html/base/src/nsFrame.cpp, line 2506
###!!! ASSERTION: Row index out of range!: 'aRowIndex >=0 && aRowIndex < GetRowC
ount(aIsHorizontal)', file d:/trees/vcard/mozilla/layout/xul/base/src/grid/nsGri
d.cpp, line 584
###!!! ASSERTION: Row index out of range!: 'aRowIndex >=0 && aRowIndex < GetRowC
ount(aIsHorizontal)', file d:/trees/vcard/mozilla/layout/xul/base/src/grid/nsGri
d.cpp, line 598
###!!! ASSERTION: Row index out of range!: 'aRowIndex >=0 && aRowIndex < GetRowC
ount(aIsHorizontal)', file d:/trees/vcard/mozilla/layout/xul/base/src/grid/nsGri
d.cpp, line 613
###!!! ASSERTION: The recipient list is not supposed to be null -Fix the caller!
: 'recipients', file d:/trees/vcard/mozilla/mailnews/compose/src/nsMsgCompFields
.cpp, line 589
| Reporter | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Comment 2•22 years ago
|
||
Does reverting the last change to nsXULElement.cpp help?
| Reporter | ||
Comment 3•22 years ago
|
||
modern has it too.
(but you have to use View | Apply theme from the browser to switch, due to bug
#231769)
Comment 4•22 years ago
|
||
This problem exists on Solaris/SPARC as well, it's not restricted to
PC/Windows2k
| Reporter | ||
Comment 5•22 years ago
|
||
yes, backing out the change to nsXULElement.cpp (from bug #197427) fixes this
problem.
thanks bz. I'll re-assign to jst, since it was his change.
Comment 6•22 years ago
|
||
*** Bug 233192 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 7•22 years ago
|
||
Actually, jst's change just fixed a number of DOM-compliance bugs in the XUL
element (by making it use the same code as HTML elements do, which is far better
tested and more correct). So chances are, anything that broke was relying on a
bug...
Comment 8•22 years ago
|
||
This fixes the problem, thanks to bz for figuring out most of this. The actual
problem appears to be in the XBL binding manage's notification handling, and
bz's looking into that problem.
| Assignee | ||
Comment 9•22 years ago
|
||
Based on info from bc, this shoul fix bug 233137 too.
Blocks: 233137
Updated•22 years ago
|
Attachment #140701 -
Flags: superreview?(bzbarsky)
Attachment #140701 -
Flags: review?(mscott)
| Reporter | ||
Updated•22 years ago
|
Attachment #140701 -
Flags: review?(mscott) → review+
| Assignee | ||
Comment 10•22 years ago
|
||
Comment on attachment 140701 [details] [diff] [review]
Make us fire correct insert/append notifications when inserting/appending elements to the DOM
>Index: content/base/src/nsGenericElement.cpp
>+ PRBool isAppend = aIndex == GetChildCount();
Do we care that this runs even if aNotify is false?
In any case, put parens about the equality test to make this more clear.
>@@ -2776,19 +2783,23 @@ nsGenericElement::doInsertBefore(nsICont
>- res = aElement->InsertChildAt(newContent, refPos, PR_TRUE, PR_TRUE);
>+ if (!aRefChild) {
>+ res = aElement->AppendChildTo(newContent, PR_TRUE, PR_TRUE);
>+ } else {
>+ res = aElement->InsertChildAt(newContent, refPos, PR_TRUE, PR_TRUE);
>+ }
Why do we need this change now that we fixed up InsertChildAt to fire the other
notification?
>Index: content/xul/content/src/nsXULElement.cpp
>+ PRBool isAppend = aIndex == GetChildCount();
As above.
>+ if (mDocument) {
>+ aKid->SetDocument(mDocument, aDeepSetDocument, PR_TRUE);
Why only do this if mDocument? Are we guaranteed that the kids have a null
mDocument coming in here? If so, we should probably assert that....
| Assignee | ||
Comment 11•22 years ago
|
||
Comment 12•22 years ago
|
||
Fix checked in. Leaving bug open to figure out the nsBindingManager issue...
| Assignee | ||
Comment 13•22 years ago
|
||
I should just take this.
Assignee: sspitzer → bzbarsky
Component: Composition → XBL
OS: Windows 2000 → All
Product: MailNews → Browser
Hardware: PC → All
| Assignee | ||
Comment 14•22 years ago
|
||
Comment on attachment 140701 [details] [diff] [review]
Make us fire correct insert/append notifications when inserting/appending elements to the DOM
sr=bzbarsky with the comments I made and the irc discussion.
Attachment #140701 -
Flags: superreview?(bzbarsky) → superreview+
Comment 15•22 years ago
|
||
This have introduced a new "may be used uninitialized" warning on brad TBox:
+content/base/src/nsGenericElement.cpp:2412
+ `PRBool isAppend' might be used uninitialized in this function
Comment 16•22 years ago
|
||
That's a bogus warning, it won't be used w/o being initialized. Silly compiler :-)
Comment 17•22 years ago
|
||
Appears fixed in 2004021109 win32. Can anyone else confirm?
| Reporter | ||
Comment 18•22 years ago
|
||
Comment 19•22 years ago
|
||
Perhaps a change to the summary description since it's no longer relevant to the
open issue?
| Assignee | ||
Comment 20•22 years ago
|
||
Please stop spamming this bug, ok? The summary is relevant, because that's how
I can find this bug...
| Assignee | ||
Comment 21•22 years ago
|
||
Well, works as well as any of the rest of the code at least...
Attachment #140704 -
Attachment is obsolete: true
| Assignee | ||
Comment 22•22 years ago
|
||
Comment on attachment 142299 [details] [diff] [review]
Patch to binding manager that sorta works
The algorithm was suggested by hyatt, by the way. So r=me on the general
approach if that helps with the review. ;)
Attachment #142299 -
Flags: superreview?(jst)
Attachment #142299 -
Flags: review?(jst)
Comment 23•22 years ago
|
||
Comment on attachment 142299 [details] [diff] [review]
Patch to binding manager that sorta works
Looks good. r+sr=jst
Attachment #142299 -
Flags: superreview?(jst)
Attachment #142299 -
Flags: superreview+
Attachment #142299 -
Flags: review?(jst)
Attachment #142299 -
Flags: review+
| Assignee | ||
Comment 24•22 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
This checkin (tracked by Neil) has broken the behavior of the hierarchical
status bar in Composer and Nvu...
| Assignee | ||
Comment 26•22 years ago
|
||
Daniel, if you can file a bug on that, preferably with as small a testcase as
possible that shows the problem, I'll look into it....
You need to log in
before you can comment on or make changes to this bug.
Description
•