Fixing regression bug 233191. Make sure we fire the correct document notifications when inserting/appending children to a DOM node through the DOM APIs. r=mscott@mozilla.org, sr=bzbarsky@mit.edu